# ikuy_old

./: .gitignore  .gitmodules  Makefile  README.md  pynq-z2.cfg
src/: CMakeLists.txt  cmake.sh  main.c  ninja.sh  setup.S
src/apps/: CMakeLists.txt
src/apps/boot/: CMakeLists.txt  board_parameters.h  boot.bif  boot.ld  ddrc_init.c  main.c  mmu_table.S  ps7_init.c  ps_init_program.h  slcr_init.c  startup.S  startup.s  uart_init.c
src/apps/boot_chk/: Makefile
src/boot/: CMakeLists.txt  boot.ld  ddrc_init.c  debug_init.c  main.c  mmu_table.S  ps7_init.c  ps_init_program.c  slcr_init.c  startup.S  uart_init.c
src/carts/: CMakeLists.txt
src/carts/blinky/: CMakeLists.txt  app.ld  main.c  setup.S
src/carts/blinky/hardware/: CMakeLists.txt  Makefile  fpgamake
src/carts/blinky/hardware/Silice/: main.ice
src/carts/blinky/hardware/boards/arty-a7-35/: stats.txt
src/carts/blinky/hardware/boards/pynqz2-z7-20/: stats.txt  top.xdc
src/carts/blinky/hardware/sim/: CMakeLists.txt
src/carts/blinky/hardware/spinalHDL/: build.gradle  build.sbt  settings.gradle
src/carts/blinky/hardware/verilog/: GCD.v  blinky_zynqy.v  main.v  mother.v  ps7_axi_wrapper.v  ps7_blackbox.v  ps7_wrapper.v  ps7_wrapper_hi.v  ps7_wrapper_lo.v  ps7_wrapper_mid.v  silice_framework.v  silice_main.v  vga_test_bars.v
src/chips/bus_and_chips/: Axi3Bus.scala  CHeaderRegisterOutput.scala  Chip.scala  CustomChip.scala  CustomRegisters.scala  DebugCustomChip.scala  Enums.scala  Fields.scala  HardChip.scala  HardRegisters.scala  MarkdownRegisterOutput.scala  Motherboard.scala  MrResetti.scala  Registers.scala  build.sbt
src/chips/dissy/: build.sbt  colourbars.scala  displaysync.scala  dissy.scala  timing.scala
src/chips/dissy/project/: ikuy.scala
src/chips/zynq_hard_soc/: PS7.scala  build.sbt  zynqArmA9CCode.scala  zynqArmRegisters.scala  zynqHardSoC.scala  zynqL1CacheCCode.scala  zynqMemoryMap.scala  zynqPS7Wrapper.scala  zynq_hard_chips.scala
src/chips/zynq_hard_soc/registers/: axi_hp_regdef.txt  can_regdef.txt  cortexa9_pmu_regdef.txt  cti_regdef.txt  dap_regdef.txt  ddrc_regdef.txt  devcfg_fielddef.txt  devcfg_regdef.txt  dmac_regdef.txt  etb_regdef.txt  ftm_regdef.txt  funnel_regdef.txt  gem_regdef.txt  gpio_fielddef.txt  gpio_regdef.txt  i2c_fielddef.txt  i2c_regdef.txt  itm_regdef.txt  l2cache_regdef.txt  nic301_regdef.txt  ocm_regdef.txt  ptm_regdef.txt  qos301_regdef.txt  qspi_fielddef.txt  qspi_regdef.txt  scu_fielddef.txt  scu_regdef.txt  sdio_regdef.txt  slcr_field_long_desc_def.txt  slcr_fielddef.txt  slcr_regdef.txt  smcc_regdef.txt  spi_fielddef.txt  spi_regdef.txt  swdt_regdef.txt  tpiu_regdef.txt  ttc_regdef.txt  uart_fielddef.txt  uart_regdef.txt  usb_regdef.txt
src/chips/zynq_hard_soc/src/main/: memory_map.h  zynqArmRegisters.scala  zynqHardSoC.scala  zynqPS7Wrapper.scala
src/chips/zynq_hard_soc/verilog/: blinky_zynqy.v  ps7_axi_wrapper.v  ps7_blackbox.v  ps7_wrapper.v
src/hardware/: BlinkyHW.scala  BlinkyHW_sim.scala  Build.scala  CMakeLists.txt  MyVivadoFlow.scala  build.sbt
src/hardware/boards/arty-a7-35/: top.xdc
src/hardware/boards/pynqz2-z7-20/: top.xdc
src/hardware/project/: ikuy.scala
src/libraries/: CMakeLists.txt
src/libraries/BuggyBoy/: CMakeLists.txt
src/libraries/BuggyBoy/docs/: BuggyBoy.md
src/libraries/BuggyBoy/include/BuggyBoy/: BuggyBoy.h
src/libraries/Dissy/: CMakeLists.txt
src/libraries/Dissy/docs/: Dissy.md
src/libraries/Dissy/include/Dissy/: Dissy.h
src/libraries/a9sdk/: CMakeLists.txt  ddrc.h  devcfg.h  gpio.h  hw_regs.h  qspi.h  sclr.h  scu.h  spi.h  uart.h
src/libraries/a9sdk/hw/: arm_cop.h  cache.h  ddrc.h  devcfg.h  gpio.h  memory_map.h  qspi.h  reg.h  scu.h  slcr.h  spi.h  uart.h
src/libraries/a9sdk/include/: assert.h  stdbool.h  stdint.h
src/libraries/a9sdk/include/hw/: arma9_cop.h  cti.h  ddrc.h  devcfg.h  gpio.h  i2c.h  l1cache.h  qspi.h  reg.h  slcr.h  spi.h  uart.h
src/libraries/a9sdk/src/: assert.c  l1cache.c
src/libraries/bus_and_chips/docs/: BuggyBoy.md
src/libraries/bus_and_chips/include/bus_and_chips/: BuggyBoy.h
src/libraries/core/: CMakeLists.txt
src/libraries/core/include/: float.h  hwreg.h  snprintf.h  stdarg.h
src/libraries/core/src/: assert.c  snprintf.c
src/libraries/hw_fpga/: CMakeLists.txt
src/libraries/hw_fpga/include/hw_fpga/: pcap.h
src/libraries/hw_fpga/src/: pcap.c
src/libraries/hw_gpio/: CMakeLists.txt
src/libraries/hw_gpio/include/hw_gpio/: gpio.h  hw_gpio.h
src/libraries/hw_gpio/src/: hw_gpio.c
src/libraries/hw_i2c/: CMakeLists.txt
src/libraries/hw_i2c/include/hw_i2c/: i2c.h
src/libraries/hw_i2c/src/: i2c.c
src/libraries/hw_slcr/: CMakeLists.txt
src/libraries/hw_slcr/include/hw_slcr/: slcr.h
src/libraries/hw_slcr/src/: hw_slcr.c
src/libraries/hw_timers/: CMakeLists.txt
src/libraries/hw_timers/include/hw_timers/: global.h
src/libraries/hw_timers/src/: global.c
src/libraries/serial_debug/: CMakeLists.txt
src/libraries/serial_debug/include/serial_debug/: debug_print.h  uart_control.h
src/libraries/serial_debug/src/: debug_print.c  uart_control.c
src/libraries/serialdebug/: CMakeLists.txt
src/libraries/serialdebug/include/: debug_print.h  uart_control.h
src/libraries/serialdebug/src/: debug_print.c  uart_control.c
src/libraries/system_info/: CMakeLists.txt
src/libraries/system_info/include/system_info/: cpu.h
src/libraries/system_info/src/: cpu.c
src/libraries/zynq_ps/: CMakeLists.txt
src/libraries/zynq_ps/docs/: axi_hp.md  can.md  cortexa9_pmu.md  cti.md  dap.md  ddrc.md  devcfg.md  dmac.md  etb.md  ftm.md  funnel.md  gem.md  gpio.md  i2c.md  itm.md  l2cache.md  ptm.md  qspi.md  scu.md  sdio.md  slcr.md  smcc.md  spi.md  swdt.md  tpiu.md  ttc.md  uart.md  usb.md  zynq_ps.md
src/libraries/zynq_ps/include/zynq_ps/: arma9.h  axi_hp.h  can.h  cortexa9_pmu.h  cti.h  dap.h  ddrc.h  devcfg.h  dmac.h  etb.h  ftm.h  funnel.h  gem.h  gpio.h  i2c.h  itm.h  l1cache.h  l2cache.h  memory_map.h  ptm.h  qspi.h  scu.h  sdio.h  slcr.h  smcc.h  spi.h  swdt.h  tpiu.h  ttc.h  uart.h  usb.h  zynq_ps.h
src/libraries/zynq_ps/src/: l1cache.c
tools/: Makefile
(+51 files in other folders)
